# OPM-NI-Aquicition

./: README.md  main.py  pyproject.toml  refactor.py
src/: __init__.py
src/data/: __init__.py  exporter.py  tdms_recorder.py
src/hardware/: __init__.py  daq_config.py  daq_worker.py
src/processing/: __init__.py  ecg_processor.py  filters.py  ica_worker.py  opm_processor.py
src/ui/: __init__.py  chart_widget.py  control_panel.py  ica_window.py  main_window.py  settings_dialog.py  styles.py
tests/: __init__.py  test_ecg_processor.py  test_exporter.py  test_filters.py  test_opm_processor.py
